hacked the scrollbar jump issue by forcing scrollbar on all pages // inelegant

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@
 }
 
 /* Master styles */
+
+/* fixing scrollbar jump issue */
+@media screen and (min-width: 960px) {
+    html { overflow-y: scroll; }
+}
+
 body {
     margin: 0px;
 }
